--- a/backend2/package.json
+++ b/backend2/package.json
@@ -12,12 +12,14 @@
   "description": "",
   "dependencies": {
     "axios": "^1.9.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "multer": "^2.0.1",
     "unzipper": "^0.12.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/node": "^22.15.29",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
